FIX highlight for dark mode but applies to both modes

--- a/src/picker/assets/scss/style.scss
+++ b/src/picker/assets/scss/style.scss
@@ -389,7 +389,7 @@
   border: solid 4px #fff;
 
   &.#{$prefix}selected, &:hover {
-    background-color: #f9f9f9;
+    background-color: #d4d3d379;
   }
 
   &.#{$prefix}selected {
